@@ -1,4 +1,5 @@
 In development
+	+ Now you can retweet others
 	* Now it is easy to select the tweet text from the end
 
 0.6
